--- a/hidden.html
+++ b/hidden.html
@@ -6,6 +6,7 @@
     <title>Прихована сторінка - Внутрішня інформація</title>
     <!-- Ця мета-тег забороняє індексування сторінки -->
     <meta name="robots" content="noindex, nofollow">
+    <meta name="googlebot" content="noindex, nofollow">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -19,7 +20,6 @@
                 <li><a href="about.html">Про нас</a></li>
                 <li><a href="services.html">Послуги</a></li>
                 <li><a href="contact.html">Контакти</a></li>
-                <li><a href="hidden.html">Прихована сторінка</a></li>
             </ul>
         </nav>
     </header>
@@ -101,17 +101,17 @@ website/
                                 <th>Автор</th>
                             </tr>
                             <tr>
-                                <td>11.06.2024</td>
+                                <td>11.06.2025</td>
                                 <td>Створено базову структуру сайту</td>
                                 <td>WebStudio</td>
                             </tr>
                             <tr>
-                                <td>11.06.2024</td>
+                                <td>11.06.2025</td>
                                 <td>Додано SEO оптимізацію</td>
                                 <td>WebStudio</td>
                             </tr>
                             <tr>
-                                <td>11.06.2024</td>
+                                <td>11.06.2025</td>
                                 <td>Створено приховану сторінку</td>
                                 <td>WebStudio</td>
                             </tr>
@@ -133,8 +133,8 @@ website/
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 WebStudio. Всі права захищені.</p>
+            <p>&copy; 2025 WebStudio. Всі права захищені.</p>
             <p><small>Ця сторінка не індексується</small></p>
         </div>
     </footer>
-</body
+</body>
