--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
+    <meta name="google-site-verification" content="q7OcWN6jck7GWTyBJ7nRofYgNXq95OY3FZu-4XWkjis" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Про нас - WebStudio</title>
