--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="canonical" href="https://naastyushka.github.io/soc_eng/about.html">
     
-    <!-- 1. ДОДАТИ: Google reCAPTCHA script -->
+    <!-- Google reCAPTCHA script -->
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     
     <!-- 2. ДОДАТИ: CSS для overlay -->
